--- a/weather/values.yaml
+++ b/weather/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: hello-world
+  repository: yeasy/simple-web
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
