Change path to weather service

--- a/weather/values.yaml
+++ b/weather/values.yaml
@@ -29,7 +29,7 @@ ingress:
   hosts:
     - host: ecrews.dev
       paths:
-        - /
+        - /weather
   tls:
     - secretName: ecrews-tls
       hosts:
