Update image repository and tag

--- a/weather/values.yaml
+++ b/weather/values.yaml
@@ -1,8 +1,9 @@
 replicaCount: 1
 
 image:
-  repository: yeasy/simple-web
   pullPolicy: IfNotPresent
+  repository: ericcrews/weather
+  tag: 5b09d38d3bf04b5d17f1319384c3eee778f84b5b
 
 imagePullSecrets: []
 nameOverride: ""
