--- a/weather/values.yaml
+++ b/weather/values.yaml
@@ -27,11 +27,11 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
   hosts:
     - host: ecrews.dev
       paths:
-        - /weather
+        - /weather(/|$)(.*)
   tls:
     - secretName: ecrews-tls
       hosts:
@@ -40,7 +40,6 @@ ingress:
 resources: {}
 
 nodeSelector: {}
-
 tolerations: []
 
 affinity: {}
