--- a/apps/templates/nginx-ingress.yaml
+++ b/apps/templates/nginx-ingress.yaml
@@ -14,6 +14,10 @@ spec:
     path: nginx-ingress
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
+    helm:
+      parameters:
+      - name: controller.service.externalTrafficPolicy
+        value: Local
   syncPolicy:
     automated:
       prune: true
