--- a/weather/values.yaml
+++ b/weather/values.yaml
@@ -6,7 +6,7 @@ image:
     geojs: ericcrews/geojs
     main: ericcrews/weather
     openweathermap: ericcrews/openweathermap
-  tag: 1096893
+  tag: "1096893"
 
 imagePullSecrets: []
 nameOverride: ""
