--- a/simple-weather-service/Chart.yaml
+++ b/simple-weather-service/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: weather
+name: simple-weather-service
 description: A Helm chart for my weather service
 type: application
 version: 0.1.2
