--- a/simple-weather-service/templates/deployment.yaml
+++ b/simple-weather-service/templates/deployment.yaml
@@ -27,9 +27,16 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository.main }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+          - name: GEOJS_SERVICE_HOST
+            value: {{ .Values.main.env.geojs_service_host | quote }}
+          - name: OPENWEATHERMAP_SERVICE_HOST
+            value: {{ .Values.main.env.openweathermap_service_host | quote }}
+          - name: PORT
+            value: {{ .Values.main.containerPort }}
           ports:
             - name: http
-              containerPort: 3030
+              containerPort: {{ .Values.main.containerPort }}
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -44,11 +51,14 @@ spec:
         - name: {{ .Chart.Name }}-geojs
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository.geojs }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.geojs.image.repository }}:{{ .Values.geojs.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+					env:
+          - name: PORT
+            value: {{ .Values.geojs.containerPort }}
           ports:
             - name: http
-              containerPort: 4040
+              containerPort: {{ .Values.geojs.containerPort }}
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -63,17 +73,19 @@ spec:
         - name: {{ .Chart.Name }}-openweathermap
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository.openweathermap }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.openweathermap.image.repository }}:{{ .Values.openweathermap.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            - name: API_KEY
-              valueFrom:
-                secretKeyRef:
-                  key: api-key
-                  name: openweathermap
+          - name: API_KEY
+            valueFrom:
+              secretKeyRef:
+                key: api-key
+                name: openweathermap
+          - name: PORT
+            value: {{ .Values.openweathermap.containerPort }}
           ports:
             - name: http
-              containerPort: 5050
+              containerPort: {{ .Values.openweathermap.containerPort }}
               protocol: TCP
           livenessProbe:
             httpGet:
